--- a/Assignment2/Assignment2/Assignment2.csproj
+++ b/Assignment2/Assignment2/Assignment2.csproj
@@ -46,9 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Action2.cs" />
+    <Compile Include="Action.cs" />
     <Compile Include="Node.cs" />
-    <Compile Include="Problem2.cs" />
+    <Compile Include="Problem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UniformCostSearch.cs" />
