major changes, new C++ version with main implementation

--- a/FinalProject/CSC480.FinalProject/CSC480.FinalProject.Connect4.csproj
+++ b/FinalProject/CSC480.FinalProject/CSC480.FinalProject.Connect4.csproj
@@ -41,7 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Game.cs" />
-    <Compile Include="GameResult.cs" />
+    <Compile Include="Enums.cs" />
+    <Compile Include="GameValueCalculator.cs" />
+    <Compile Include="InvalidMoveException.cs" />
+    <Compile Include="Minimax.cs" />
+    <Compile Include="MinimaxPlayer.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Referee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
