adjustments to heuristic: double rather than int; added prelim training data support

--- a/FinalProject/rihaffey/rihaffey.vcxproj
+++ b/FinalProject/rihaffey/rihaffey.vcxproj
@@ -41,7 +41,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions); DEBUG</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions); DIAGNOSTICS; TRAINING</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -66,6 +66,7 @@
     <ClInclude Include="HeuristicCalculator.h" />
     <ClInclude Include="Minimax.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="TrainingController.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
@@ -74,6 +75,7 @@
     <ClCompile Include="Minimax.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Program.cpp" />
+    <ClCompile Include="TrainingController.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
