--- a/FinalProject/rihaffey/rihaffey.vcxproj.filters
+++ b/FinalProject/rihaffey/rihaffey.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="TrainingController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FirstChancePlayHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Player.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TrainingController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FirstChancePlayHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
