--- a/FinalProject/MachineLearningVersion/MachineLearningVersion.csproj
+++ b/FinalProject/MachineLearningVersion/MachineLearningVersion.csproj
@@ -48,6 +48,7 @@
     <Compile Include="LearningPlayer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomPlayer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Referee\Referee.csproj">
